--- a/master.css
+++ b/master.css
@@ -30,3 +30,11 @@ body {
   font-size: 100px;
   text-align: center;
 }
+#Hobbies {
+  text-align: center;
+  font-size: 30px
+}
+#H {
+  text-align: center;
+  font-size: 20px;
+}
